src/sections/promo/style.css
.promo {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 80vh;
  margin-bottom: 6rem;
  padding-top: 6rem;
  padding-bottom: 4rem;
}

.promo__wrapper {
  display: flex;
  align-items: center;
  gap: 5%;
}

.promo__text {
  max-width: 55%;
}

.promo__image {
  width: 546px;
  height: 470px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--color-blue-700);
  border-radius: var(--border-radius-s);
}

.promo__avatar {
  width: 80%;
  height: 80%;
  object-fit: cover; /* или contain */
  border-radius: var(--border-radius-s);
}

.promo__greeting {
  display: block;
  margin-bottom: 24px;
  font-family: 'Oswald', sans-serif;
  font-size: 56px;
  font-weight: 400;
  line-height: 62px;
  text-transform: uppercase;
  letter-spacing: 1px;
  color: var(--color-blue-700);
}

.promo__slogan {
  margin-bottom: 24px;
  font-size: 18px;
  line-height: 24px;
  color: var(--color-blue-700);
}

.promo__welcome {
  margin-bottom: 40px;
  font-size: 18px;
  line-height: 24px;
  color: var(--color-blue-700);
}

.promo__btns {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.promo__btn {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 20px;
  padding-right: 20px;
  color: var(--color-white);
  border-bottom: none;
  background-color: var(--color-blue-700);
  border-radius: 40px;
  transition: background 0.5s ease-in-out;
}

.promo__btn:hover {
  background: var(--gradient);
  transform: translateY(-2px);
}

.promo__mouse-scroll-cont {
  position: absolute;
  bottom: 3%;
  left: 50%;
  transform: translateX(-50%);
}

@media screen and (max-width: 1044px) {
  .promo {
    height: auto;
    padding-bottom: 0;
  }

  .promo__wrapper {
    flex-direction: column;
    gap: 4rem;
  }

  .promo__text {
    max-width: 70%;
  }

  .promo__mouse-scroll-cont {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  .promo__image {
    width: 100%;
    height: 354px;
  }

  .promo__greeting {
    margin-bottom: 12px;
    font-size: 43px;
    line-height: 49px;
  }

  .promo__slogan {
    max-width: 448px;
    margin-bottom: 12px;
    text-align: start;
  }

  .promo__text {
    max-width: 616px;
    text-align: start;
  }

  .promo__btns {
    flex-direction: column;
  }

  .promo__btn {
    padding-top: 14px;
    padding-bottom: 14px;
    padding-left: 16px;
    padding-right: 16px;
  }

  .promo__welcome {
    margin-bottom: 32px;
  }
}

@media only screen and (max-width: 37.5em) {
  .promo__welcome {
    margin-bottom: 32px;
    font-size: 16px;
    line-height: 22px;
  }

  .promo__slogan {
    font-size: 16px;
    text-align: initial;
  }

  .promo__text {
    font-size: 16px;
    text-align: initial;
  }

  .promo__mouse-scroll-cont {
    display: none;
  }

  .promo__socials {
    display: none;
  }
}

@media screen and (max-width: 375px) {
  .promo {
    padding-top: 5rem;
    padding-bottom: 0;
    margin-bottom: 4rem;
  }

  .promo__greeting {
    font-size: 39px;
    line-height: 45px;
  }

  .promo__image {
    height: auto;
  }

  .promo__avatar {
    object-fit: none;
  }

  .promo__btns {
    align-items: flex-start;
  }
}

